<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="404dp"
        android:layout_height="256dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textPesoInicialFrasco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint5"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/textPesoFinalFrasco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint6"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/textPesoAreiaFunil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint7"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/textPesoSoloUmido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint8"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/buttonCalcularDensidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calcularDensidadeAparente"
            android:text="CALCULAR DENSIDADE APARENTE" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="254dp"
        android:layout_height="251dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peso Inicial do Frasco"
            android:textSize="18sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peso Final do Frasco"
            android:textSize="18sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Diferença"
            android:textSize="18sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peso Areia do Funil"
            android:textSize="18sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peso Final"
            android:textSize="18sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Densidade Aparente da Areia"
            android:textSize="18sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Volume Furo"
            android:textSize="18sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peso Solo Úmido"
            android:textSize="18sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Densidade Úmida"
            android:textSize="18sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Densidade Seca"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="78dp"
        android:layout_height="249dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/txtPesoInicialFrasco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPesoFinalFrasco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDiferenca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPesoAreiaFunil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPesoFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDensidadeAparenteAreia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtVolumeFuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPesoSoloUmido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDensidadeUmida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDensidadeSeca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>