<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layerType="software"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="363dp"
        android:layout_height="151dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editPesoCapsula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:allowUndo="true"
            android:hint="@string/hint"
            android:inputType="numberDecimal"
            android:saveEnabled="true" />

        <EditText
            android:id="@+id/editCapsulaSoloUmido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint2"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editCapsulaSoloSeco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:hint="@string/hint3"
            android:inputType="numberDecimal" />

        <Space
            android:id="@+id/space"
            style="@style/CardView.Light"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="18dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="226dp"
        android:layout_height="194dp"
        android:layout_marginBottom="69dp"
        android:clickable="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/linearLayout9">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peso da capsula"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cápsula com solo úmido"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cápsula com solo seco"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peso da água"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Solo seco"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Umidade"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Speedy"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fator de conversão"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textPesoCapsula2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="134dp"
        android:layout_height="194dp"
        android:layout_marginStart="5dp"
        android:clickable="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout10"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout9"
        app:layout_constraintStart_toEndOf="@+id/linearLayout10"
        app:layout_constraintTop_toTopOf="@+id/linearLayout10">

        <TextView
            android:id="@+id/textPesoCapsula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textCapsulaSoloUmido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textCapsulaSoloSeco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textPesoAgua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSoloSeco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textUmidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textSpeedy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textFatorConversao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="388dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:onClick="calcularUmidadeCampo"
        android:text="CALCULAR UMIDADE DE CAMPO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout11"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="@+id/linearLayout10" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="155dp"
        android:layout_height="17dp"
        android:text="IN SITU"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="362dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="false"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:text="DETERMINAÇÃO DA UMIDADE DE CAMPO"
        android:textAlignment="center"
        android:textDirection="firstStrongRtl"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout9"
        app:layout_constraintStart_toStartOf="@+id/linearLayout9"
        app:layout_constraintTop_toTopOf="parent" />


    <!--TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->

</androidx.constraintlayout.widget.ConstraintLayout>